[gd_scene load_steps=63 format=3 uid="uid://bu8xjkp7pay7c"]

[ext_resource type="Script" path="res://components/enemy/enemy.gd" id="1_vwwp1"]
[ext_resource type="PackedScene" uid="uid://cst0ustyi1sg0" path="res://components/hp_component/hp_component.tscn" id="3_bbt52"]
[ext_resource type="PackedScene" uid="uid://riemj5f1l4rm" path="res://components/enemy/enemy_state_machine/enemy_state_machine.tscn" id="4_mue1o"]
[ext_resource type="PackedScene" uid="uid://cdp4cukbo3dts" path="res://components/enemy_lightsource/enemy_lightsource.tscn" id="5_36evl"]
[ext_resource type="PackedScene" uid="uid://ces8561yy2g14" path="res://components/enemy/enemy_takedown_area/takedown_area.tscn" id="5_l5gwx"]
[ext_resource type="Texture2D" uid="uid://c24dpgfx2ej20" path="res://assets/Art/character_sprites/sprite-sheet_enemy_soldier_5x.png" id="5_www37"]
[ext_resource type="PackedScene" uid="uid://dnx83jbqaexf2" path="res://components/health_bar/health_bar.tscn" id="6_dvjep"]
[ext_resource type="Texture2D" uid="uid://dmwgpw4ba2qrb" path="res://assets/Art/ui/sprite-sheet_enemy-indicators_5x.png" id="8_757dm"]
[ext_resource type="Texture2D" uid="uid://bv1qm7gmb8rrj" path="res://assets/Placeholders/BoundaryTile.png" id="9_ho1jc"]

[sub_resource type="Shader" id="Shader_cacjm"]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform bool active;
uniform vec3 flash_color : source_color = vec3(1.0);


void fragment(){
	vec4 t = texture(TEXTURE, UV);
	if (active == true) {
		COLOR = vec4(flash_color, t.a);
	}
	
}"

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_usktf"]
polygon = PackedVector2Array(-41, -64, 44, -65, 47, 73, -37, 69)

[sub_resource type="CircleShape2D" id="CircleShape2D_wl61l"]
radius = 1200.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ftf01"]
atlas = ExtResource("5_www37")
region = Rect2(100, 300, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7sge"]
atlas = ExtResource("5_www37")
region = Rect2(0, 1200, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdh1h"]
atlas = ExtResource("5_www37")
region = Rect2(0, 1350, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml24l"]
atlas = ExtResource("5_www37")
region = Rect2(0, 600, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnwlw"]
atlas = ExtResource("5_www37")
region = Rect2(100, 600, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v4kh"]
atlas = ExtResource("5_www37")
region = Rect2(200, 600, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cj1a"]
atlas = ExtResource("5_www37")
region = Rect2(300, 600, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ti3r"]
atlas = ExtResource("5_www37")
region = Rect2(0, 1050, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqsyo"]
atlas = ExtResource("5_www37")
region = Rect2(100, 1050, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0wss"]
atlas = ExtResource("5_www37")
region = Rect2(200, 1050, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_urydg"]
atlas = ExtResource("5_www37")
region = Rect2(300, 1050, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8q3a"]
atlas = ExtResource("5_www37")
region = Rect2(0, 150, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_btyqr"]
atlas = ExtResource("5_www37")
region = Rect2(100, 150, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt8d6"]
atlas = ExtResource("5_www37")
region = Rect2(200, 150, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_mns5s"]
atlas = ExtResource("5_www37")
region = Rect2(300, 150, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny8hx"]
atlas = ExtResource("5_www37")
region = Rect2(0, 0, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgkfy"]
atlas = ExtResource("5_www37")
region = Rect2(100, 0, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhw8f"]
atlas = ExtResource("5_www37")
region = Rect2(200, 0, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7udcw"]
atlas = ExtResource("5_www37")
region = Rect2(300, 0, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0joob"]
atlas = ExtResource("5_www37")
region = Rect2(0, 900, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7pcw"]
atlas = ExtResource("5_www37")
region = Rect2(100, 900, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbdy3"]
atlas = ExtResource("5_www37")
region = Rect2(200, 900, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8c1w"]
atlas = ExtResource("5_www37")
region = Rect2(300, 900, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v4my"]
atlas = ExtResource("5_www37")
region = Rect2(0, 300, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7etp"]
atlas = ExtResource("5_www37")
region = Rect2(100, 300, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxmsx"]
atlas = ExtResource("5_www37")
region = Rect2(200, 300, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xdj7"]
atlas = ExtResource("5_www37")
region = Rect2(300, 300, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gscv"]
atlas = ExtResource("5_www37")
region = Rect2(0, 750, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfga8"]
atlas = ExtResource("5_www37")
region = Rect2(100, 750, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsgkr"]
atlas = ExtResource("5_www37")
region = Rect2(200, 750, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsl2r"]
atlas = ExtResource("5_www37")
region = Rect2(300, 750, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yrj2"]
atlas = ExtResource("5_www37")
region = Rect2(0, 450, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0duf"]
atlas = ExtResource("5_www37")
region = Rect2(100, 450, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma2es"]
atlas = ExtResource("5_www37")
region = Rect2(200, 450, 100, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghplj"]
atlas = ExtResource("5_www37")
region = Rect2(300, 450, 100, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_mawxy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftf01")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7sge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7sge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7sge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7sge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7sge")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdh1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdh1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdh1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdh1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdh1h")
}],
"loop": true,
"name": &"stun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml24l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnwlw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v4kh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cj1a")
}],
"loop": true,
"name": &"walk_back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ti3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqsyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0wss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urydg")
}],
"loop": true,
"name": &"walk_bottom_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8q3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btyqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt8d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mns5s")
}],
"loop": true,
"name": &"walk_bottom_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny8hx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgkfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhw8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7udcw")
}],
"loop": true,
"name": &"walk_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0joob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7pcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbdy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8c1w")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v4my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7etp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxmsx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xdj7")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gscv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfga8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsgkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsl2r")
}],
"loop": true,
"name": &"walk_top_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yrj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0duf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma2es")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghplj")
}],
"loop": true,
"name": &"walk_top_right",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o5onu"]
size = Vector2(92, 113)

[sub_resource type="Gradient" id="Gradient_wxmq6"]
resource_local_to_scene = true
colors = PackedColorArray(1, 0.381127, 0.504527, 1, 0.235294, 0.886275, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbisd"]
atlas = ExtResource("8_757dm")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qwnk"]
atlas = ExtResource("8_757dm")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_naew6"]
atlas = ExtResource("8_757dm")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxlry"]
atlas = ExtResource("8_757dm")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sn2q"]
atlas = ExtResource("8_757dm")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1qo1"]
atlas = ExtResource("8_757dm")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sy0do"]
atlas = ExtResource("8_757dm")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_iynnm"]
atlas = ExtResource("8_757dm")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jx6kw"]
atlas = ExtResource("8_757dm")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pukco"]
atlas = ExtResource("8_757dm")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ingq"]
atlas = ExtResource("9_ho1jc")
region = Rect2(0, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_s8w5c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbisd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qwnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_naew6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxlry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sn2q")
}],
"loop": true,
"name": &"alerted",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1qo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sy0do")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iynnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx6kw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pukco")
}],
"loop": true,
"name": &"chase",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ingq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 11
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_vwwp1")

[node name="EnemyStateMachine" parent="." node_paths=PackedStringArray("enemy_parent") instance=ExtResource("4_mue1o")]
unique_name_in_owner = true
enemy_parent = NodePath("..")

[node name="HPComponent" parent="." node_paths=PackedStringArray("owner_sprite", "health_bar") instance=ExtResource("3_bbt52")]
unique_name_in_owner = true
max_hp = 10.0
has_iframe = false
hit_flash_shader = SubResource("Shader_cacjm")
damage_hit_flash_color = Color(0.972549, 0.301961, 0.392157, 1)
owner_sprite = NodePath("../AnimatedSprite2D")
health_bar = NodePath("../HealthBar")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
unique_name_in_owner = true
path_postprocessing = 1
avoidance_enabled = true
radius = 100.0
neighbor_distance = 300.0
max_speed = 200.0

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_usktf")

[node name="AlliesAlertRadius" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AlliesAlertRadius"]
shape = SubResource("CircleShape2D_wl61l")
debug_color = Color(1, 1, 1, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_mawxy")
animation = &"die"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 15.5)
shape = SubResource("RectangleShape2D_o5onu")
debug_color = Color(0.793744, 0.391735, 0.451875, 0.42)

[node name="PivotPoint" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="EnemyLightsource" parent="PivotPoint" instance=ExtResource("5_36evl")]
unique_name_in_owner = true
position = Vector2(74, 0)

[node name="ShootingRaycast" type="RayCast2D" parent="PivotPoint"]
unique_name_in_owner = true
target_position = Vector2(700, 0)
collision_mask = 11

[node name="MuzzleMarker" type="Marker2D" parent="PivotPoint"]
unique_name_in_owner = true
position = Vector2(74, 0)

[node name="TakedownArea" parent="PivotPoint" node_paths=PackedStringArray("enemy") instance=ExtResource("5_l5gwx")]
unique_name_in_owner = true
position = Vector2(17, 0)
collision_layer = 66
enemy = NodePath("../..")

[node name="HealthBar" parent="." instance=ExtResource("6_dvjep")]
unique_name_in_owner = true
z_index = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = 87.0
offset_right = 130.0
offset_bottom = 127.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
gradient = SubResource("Gradient_wxmq6")

[node name="TakedownPlaceholder" type="Label" parent="."]
unique_name_in_owner = true
visible = false
light_mask = 0
z_index = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -115.5
offset_right = 91.0
offset_bottom = -81.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.760784, 0.301961, 0.556863, 1)
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 15
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 24
text = "TAKE DOWN !"

[node name="StatusAlertSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.780392)
position = Vector2(0, -150)
sprite_frames = SubResource("SpriteFrames_s8w5c")
autoplay = "default"
